Archive2/24/acccb4c8455c64/main.cpp
concept Container {
    Container a         -> a::iterator;
    Container a, b      -> a + b